--- a/styles.css
+++ b/styles.css
@@ -12,9 +12,68 @@ html{
 body{
     font-size: 1.6rem;
     color: #454f4f;
+    text-align: center;
+   
 }
 
 h1{
     letter-spacing: 3px;
     text-align: center;
+    font-size: 4rem;
+    margin: 2rem;
 }
+
+#counter{
+  
+  padding: 1rem 2rem;
+  background-color: rgb(31, 225, 148);
+  border-radius: 2rem;
+  font-size: 4rem;
+margin: 6rem;
+  
+}
+
+p{
+    font-size: 4rem;
+}
+
+#reset{
+    padding: 1rem 4rem;
+    font-size: 4rem;
+    border-radius: 2rem;
+    margin: 6rem;
+    background-color:rgb(186, 2, 2); 
+
+}
+
+.container{
+ margin: 8rem;
+}
+
+
+@media screen and (max-width: 400px) {
+    .container{
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+
+  
+    }
+    p{
+        font-size: 2rem;
+    }
+    h1{
+        font-size: 3rem;
+    }
+    #counter{
+        padding: .5rem 3rem;
+margin: 2rem;
+font-size: 2rem;
+    }
+    #reset{
+        padding: 1rem 4rem;
+        font-size: 2rem;
+        margin: 2rem;
+    }
+    
+  }
